<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="@string/keyNombreJugador"
            android:title="@string/prefTituloNombreJugador"
            android:defaultValue="@string/defaultNombreJugador"
            android:summary="@string/prefTextoNombreJugador" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria2">
        <!-- TODO Añadir otros ajustes -->
        <ListPreference
            android:key="@string/keyColor"
            android:title="@string/prefTituloColor"
            android:dialogTitle="Elige color de fondo."
            android:entries="@array/colores"
            android:entryValues="@array/colores">
        </ListPreference>

        <ListPreference
            android:dialogTitle="Elige tamaño de letra"
            android:entries="@array/tamaños"
            android:entryValues="@array/tamaños"
            android:key="@string/keyTamaño"
            android:title="@string/prefTituloTamaño">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>
