<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_Partidajugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="4sp"
            android:text="@string/jugador"
            android:textColor="@android:color/background_dark"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_Partidafichas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/fichas"
            android:textColor="@android:color/background_dark"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_Partidafecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/fecha"
            android:textColor="@android:color/background_dark"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_Partidahora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/hora"
            android:textColor="@android:color/background_dark"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

</LinearLayout>