<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.upm.miw.SolitarioCelta.MejoresResultados">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/filtrar_por"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            tools:ignore="InefficientWeight,RtlHardcoded,UselessParent">

            <RadioButton
                android:id="@+id/rbtn_fichas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="mostrarDialogFichas"
                android:text="@string/nfichas" />

            <RadioButton
                android:id="@+id/rbtn_jugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="mostrarDialogJugador"
                android:layout_weight="1"
                android:text="@string/jugador" />

            <RadioButton
                android:id="@+id/rbtn_sinfiltro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="mostrarResultadosSinFiltro"
                android:text="@string/sin_filtro" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/posicion"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="45dp"
            android:paddingTop="10dp"
            android:text="@string/jugador"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="45dp"
            android:paddingTop="10dp"
            android:text="@string/fichas"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="45dp"
            android:paddingTop="10dp"
            android:text="@string/tiempo"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>


    <TextView
        android:id="@+id/barraEstadoResultados"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_blue_dark"/>

    <ListView
        android:id="@+id/list_resultados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>

